# A_Finite_Element_project

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
A_Finite_Element_project.und/: id.txt  settings.xml
mesh/: elements_vertexes.csv  nodes_coordinates.csv
mesh/csv_files/: allnodes.csv  elements.csv
mesh/matlab_mesh_generator/1D/: cosnov_1d.m  elements_vertexes.csv  mesh_to_csv1.m  nodes_coordinates.csv  numbers.csv
mesh/matlab_mesh_generator/2D/: elements_vertexes.csv  mesh_2d.m  mesh_to_csv2.asv  mesh_to_csv2.m  nodes_coordinates.csv  numbers.csv  untitled.m
mesh/matlab_mesh_generator/Playground/: A.csv  F.csv  elements_vertexes.csv  lap_1d.m  mesh_2d.asv  mesh_to_csv2.m  normah1_2d.m  stiff_2d_sp.m  untitled.m  untitled2.m
mesh/matlab_mesh_generator/meshes/: elements_vertexes_0.0500.csv  numbers_0.2000.csv
mesh/matlab_mesh_generator/meshes/1D_meshes/: elements_vertexes_0.0125.csv  elements_vertexes_0.0250.csv  elements_vertexes_0.0500.csv  elements_vertexes_0.1000.csv  elements_vertexes_0.2000.csv  nodes_coordinates_0.0125.csv  nodes_coordinates_0.0250.csv  (+8 more)
scripts/: A_Finite_Element_project_ClassDependencies.csv  class_dependencies_plot.py  matrix_comparison.py  note.txt  plot-convergence.py  vector_comparison.py
src/: coloring.hpp  elements.cpp  elements.hpp  functions.hpp  main  main.cpp  mat_utilities.cpp  mat_utilities.hpp  mesh.cpp  mesh.hpp  psolver.cpp  psolver.hpp  psolver2.cpp  psolver2.hpp  psolverColoring.cpp  psolverColoring.hpp  quadrature.cpp  quadrature.hpp  solver.cpp  solver.hpp  spectralFE.hpp  variables.hpp
(+14 files in other folders)
